--- a/frontend/src/app/marvel-character-profile/marvel-character-profile.component.html
+++ b/frontend/src/app/marvel-character-profile/marvel-character-profile.component.html
@@ -42,7 +42,7 @@
               
                   <section fxLayout="column" fxLayoutAlign="center center" style="width: 100%;">
                   <h3>{{characterProfile.characters.name}}</h3>
-                  <img src={{characterProfile.characters.imagePath}} alt="">
+                  <img src={{characterProfile.characters.imagePath}} alt="{{characterProfile.characters.name}} profile pic" class="character-profile-image">
                 </section>
               
                 <section fxLayout="column" fxLayoutAlign="space-evenly start" style="width: 100%;">
