working on api section

--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -1,2 +1,9 @@
-
+<div fxLayout="row" class="header">
+    <mat-toolbar>
+        <mat-toolbar-row>
+            <span class="header-text"><h1>Marvel Character Profiles</h1></span>
+        </mat-toolbar-row>
+        
+      </mat-toolbar>
+</div>
 <router-outlet></router-outlet>
