--- a/frontend/src/styles.css
+++ b/frontend/src/styles.css
@@ -7,3 +7,7 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
   
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+
+.header-text{
+    margin: auto;
+  }
