added border to profile image

--- a/frontend/src/app/marvel-character-profile/marvel-character-profile.component.css
+++ b/frontend/src/app/marvel-character-profile/marvel-character-profile.component.css
@@ -20,8 +20,6 @@
     opacity: 0;
   }
   
-
-  
   .success {
     background-color: #7dc855;
     margin-top: 1vh;
@@ -43,6 +41,13 @@
   
   .sub-heading{
     text-align: center;
+  }
+
+  .character-profile-image{
+    border: 1px solid #ec8080;
+    border-radius: 4px;
+    padding: 5px;
+    width: 150px;
   }
   
   @media (max-width:600px) {
